--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "react": "^18.2.0",
